# tracking2

./: README.md  cli.py  setup.cfg  setup.py
yolo_tracker/: config.py  tracker.py
