[metadata]
name = f8cktracking
version = 0.1.0
author = invokegpt
description = трекинг библиотека
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/mytracker
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    opencv-python
    torch
    numpy
    ultralytics
    deep_sort_realtime
